MinSalary method almost works

--- a/hr/src/main/resources/templates/employees.html
+++ b/hr/src/main/resources/templates/employees.html
@@ -37,7 +37,7 @@
 				<th><input th:field="*{salary}" /> <br/>
 			</tr>
 			<tr>
-				<th>StartDate: </th>
+				<th>Start date: </th>
 				<th><input th:field="*{startDate}" /> </th>
 			</tr>
 		</table>
